@@ -4,7 +4,8 @@ garp@digi.com - .cc .hh support
 jens persson <cscope@persson.cx> - new man page
 Edgar Toernig - cscope stability
 Martin Kraemer - various improvments
-Joshua Uziel <uzi@linuxcare.com>  - code clean up, -h and -k options, and lots more
+Joshua Uziel <uzi@linuxcare.com>  - code clean up, -h and -k options, and lots more (including autoconf)
 Mike Hopkirk <hops@sco.com> - osr5 build, ocs
 Darrylo Okahata <darrylo@users.sourceforge.net> - code quality improvements
+Brent Verner <brent@linux1.org> - -R option to recurse sub directories
 
