@@ -30,7 +30,7 @@
  DAMAGE. 
  =========================================================================*/
 
-/* $Id: global.h,v 1.3 2000/04/22 10:46:52 uzi Exp $ */
+/* $Id: global.h,v 1.1 2000/04/27 16:33:47 petr Exp $ */
 
 /*	cscope - interactive C symbol cross-reference
  *
@@ -106,6 +106,7 @@ extern	BOOL	invertedindex;	/* the database has an inverted index */
 extern	BOOL	isuptodate;	/* consider the crossref up-to-date */
 extern	BOOL	kernelmode;	/* don't use DFLT_INCDIR - bad for kernels */
 extern	BOOL	linemode;	/* use line oriented user interface */
+extern	BOOL	recurse_dir;	/* recurse dirs when searching for src files */
 extern	char	*namefile;	/* file of file names */
 extern	char	*newreffile;	/* new cross-reference file name */
 extern	FILE	*newrefs;	/* new cross-reference */
